force-app/main/default/objects/PS_Otif__c/PS_Otif__c.object-meta.xml
<CustomObject>
    <label>PS OTIF</label>
    <nameField>
        <label>PS Otif Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PS OTIFS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>