force-app/main/default/objects/PS_Otif__c/fields/Actual_Finish__c.field-meta.xml
<CustomField>
    <fullName>Actual_Finish__c</fullName>
    <label>Actual Finish</label>
    <type>Date</type>
</CustomField>