force-app/main/default/objects/PS_Otif__c/fields/EAC_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>EAC_Complete_Date__c</fullName>
    <label>EAC Complete Date</label>
    <type>Date</type>
</CustomField>