force-app/main/default/objects/PS_Otif__c/fields/EAC_Cost__c.field-meta.xml
<CustomField>
    <fullName>EAC_Cost__c</fullName>
    <label>EAC Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>