force-app/main/default/objects/PS_Otif__c/fields/EAC_Margin_Percentage__c.field-meta.xml
<CustomField>
    <fullName>EAC_Margin_Percentage__c</fullName>
    <label>EAC Margin Percentage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>