force-app/main/default/objects/PS_Otif__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <label>Engagement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>