force-app/main/default/objects/PS_Otif__c/fields/Initial_Budgeted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Initial_Budgeted_Amount__c</fullName>
    <label>Initial Budgeted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>