force-app/main/default/objects/PS_Otif__c/fields/Otif_Flag_14_Days_Buffer__c.field-meta.xml
<CustomField>
    <fullName>Otif_Flag_14_Days_Buffer__c</fullName>
    <label>Otif Flag 14 Days Buffer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>