force-app/main/default/objects/PS_Otif__c/fields/Percentage_Complete__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Complete__c</fullName>
    <label>Percentage Complete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>