force-app/main/default/objects/PS_Otif__c/fields/Planned_Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Finish_Date__c</fullName>
    <label>Planned Finish Date</label>
    <type>Date</type>
</CustomField>