force-app/main/default/objects/PS_Otif__c/fields/Project_Value_ENT__c.field-meta.xml
<CustomField>
    <fullName>Project_Value_ENT__c</fullName>
    <label>Project Value ENT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>