force-app/main/default/objects/PS_Otif__c/fields/PS_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>PS_Order_Number__c</fullName>
    <label>PS Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>