force-app/main/default/objects/PS_Otif__c/fields/Psa_Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Psa_Project_Status__c</fullName>
    <label>Psa Project Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>