force-app/main/default/objects/PS_Otif__c/fields/Unique_id__c.field-meta.xml
<CustomField>
    <fullName>Unique_id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Unique id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>